# zeek-zip-analyzer

./: CMakeLists.txt  README  configure.plugin
cmake/: Findlibzip.cmake
scripts/: __load__.zeek  __preload__.zeek  consts.zeek  init.zeek  types.zeek
scripts/Reservoir/Analyzer_ZIP/: __load__.zeek
src/: Plugin.cc  Plugin.h  ZIP.cc  ZIP.h  analyzer_zip.bif  events.bif
tests/: btest.cfg
tests/analyzer_zip/: show-plugin.zeek
